--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .grid-container {
   font-family: "Open Sans", sans-serif;
 }
@@ -53,7 +54,7 @@ a {
 }
 
 .public-btn {
-  margin-left: 25px;
+  margin-left: 30px;
 }
 
 .form-button {
@@ -64,6 +65,7 @@ a {
   border: 1px solid gray;
   background-color: #506BC4;
   color: white;
+  overflow: hidden;
 }
 
 .form-button:hover {
@@ -96,6 +98,17 @@ a {
   background-color: gray;
 }
 
+@media (min-width: 768px) {
+  .form-button {
+    width: 650px;
+  }
+  .setting-button {
+    width: 320px;
+  }
+  .cancel-button {
+    margin-left: 25px;
+  }
+}
 form {
   display: flex;
   align-items: center;
@@ -109,6 +122,7 @@ form input {
   border: 1px solid hsla(0, 0%, 50%, 0.2);
   box-shadow: 0 5px 5px -4px;
   transition: all 200ms;
+  background-color: rgba(177, 193, 218, 0.302);
 }
 form textarea {
   width: 280px;
@@ -118,8 +132,20 @@ form textarea {
   border: 1px solid hsla(0, 0%, 50%, 0.2);
   box-shadow: 0 5px 5px -4px;
   transition: all 200ms;
+  background-color: rgba(177, 193, 218, 0.302);
 }
 
+@media (min-width: 768px) {
+  form {
+    padding: 10px;
+  }
+  form input {
+    width: 650px;
+  }
+  form textarea {
+    width: 650px;
+  }
+}
 .profile-img {
   width: 40px;
   height: 40px;
@@ -159,7 +185,7 @@ form textarea {
   font-size: 18px;
 }
 .dash-board-section .dash-board-tab {
-  width: 215px;
+  width: 212px;
   height: 50px;
   margin-bottom: 10px;
   background-color: rgba(136, 167, 217, 0.3019607843);
@@ -240,14 +266,20 @@ form textarea {
 
 .doughnut-graph {
   margin: 0 auto;
-  padding-top: 10px;
+  padding: 10px;
 }
 .doughnut-graph .mobile-widget {
   position: relative;
   width: 250px;
+  margin: 0 auto;
 }
 
 .social-container {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+}
+.social-container .social-divs-container {
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -303,6 +335,9 @@ form textarea {
   margin-top: 15px;
   margin-bottom: 15px;
 }
+.recent-activity .members-profile .fa-greater-than {
+  display: none;
+}
 
 .message-user {
   padding: 15px;
@@ -335,6 +370,8 @@ form textarea {
   top: 10%;
   right: 10%;
   padding: 10px;
+  z-index: 5;
+  transition: all 200ms;
 }
 .settings .white-circle:hover {
   cursor: pointer;
@@ -342,6 +379,41 @@ form textarea {
   box-shadow: 0 5px 5px -4px;
   transition: all 200ms;
   background-color: #50C4B0;
+}
+.settings .white-circle.change {
+  translate: -40px;
+}
+.settings .toggle-text {
+  position: absolute;
+  top: 5px;
+}
+.settings .toggle-text--on {
+  left: 3px;
+}
+.settings .toggle-text--on.change {
+  opacity: 0;
+}
+.settings .toggle-text--off {
+  right: 3px;
+  transition: all 200ms;
+}
+.settings .toggle-text--off.change {
+  opacity: 1;
+}
+.settings .select-drop:after {
+  content: "▼";
+  position: absolute;
+  top: 45%;
+  right: 3%;
+  bottom: 0;
+  font-size: 20px;
+  background: transparent;
+  color: #1341d6;
+  pointer-events: none;
+  height: max-content;
+}
+.settings .select-drop {
+  position: relative;
 }
 .settings .time-select {
   width: 280px;
@@ -360,8 +432,25 @@ form textarea {
   padding: 10px;
   position: fixed;
   background-color: #D7D8D0;
+  animation: slidFromTop 2s linear;
 }
 
+@keyframes slidFromTop {
+  0% {
+    transform: translateY(-300px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+@keyframes forward {
+  0% {
+    transform: scale(0.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 .close-tab {
   font-size: 12px;
   position: absolute;
@@ -388,15 +477,15 @@ form textarea {
 }
 
 .first-notification {
-  width: 250px;
+  width: 280px;
   top: 112px;
-  right: 50px;
+  right: 30px;
 }
 
 .second-notification {
-  width: 250px;
-  top: 153px;
-  right: 50px;
+  width: 280px;
+  top: 160px;
+  right: 30px;
 }
 .second-notification .green-dot {
   background-color: #50C4B0;
@@ -415,9 +504,9 @@ form textarea {
 }
 
 .third-notification {
-  width: 280px;
-  top: 195px;
-  right: 30px;
+  width: 300px;
+  top: 210px;
+  right: 20px;
 }
 
 .show {
@@ -428,6 +517,96 @@ form textarea {
   display: none;
 }
 
+@media (min-width: 768px) {
+  .main-content {
+    grid-row: 2/3;
+    grid-column: 2/3;
+  }
+  .dash-board-section .dash-board-tab {
+    width: 610px;
+  }
+  .dash-board-section .alert {
+    width: 690px;
+    border-radius: 7px;
+  }
+  .traffic-board {
+    padding: 10px;
+  }
+  .traffic-board .traffic-heading .traffic-list ul {
+    margin-left: 110%;
+  }
+  .traffic-board .full-widget-container {
+    width: 650px;
+    padding-bottom: 15px;
+  }
+  .media-query-flex {
+    display: flex;
+  }
+  .social-container .social-divs-container {
+    flex-direction: row;
+  }
+  .new-members {
+    margin: 0;
+    padding: 10px;
+  }
+  .new-members .members-profile {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: start;
+    gap: 20px;
+    padding: 10px;
+  }
+  .new-members .members-profile .date {
+    margin-left: 30%;
+  }
+  .new-members .members-profile .date-2 {
+    margin-left: 40%;
+  }
+  .new-members .members-profile .date-3 {
+    margin-left: 38%;
+  }
+  .new-members .members-profile .date-4 {
+    margin-left: 40%;
+  }
+  .recent-activity {
+    margin: 0;
+    padding: 10px;
+  }
+  .recent-activity .members-profile {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: start;
+    gap: 20px;
+    padding: 10px;
+    position: relative;
+  }
+  .recent-activity .members-profile .fa-greater-than {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 95%;
+  }
+  .settings .select-drop:after {
+    content: "▼";
+    position: absolute;
+    top: 45%;
+    right: 2.5%;
+    bottom: 0;
+    font-size: 20px;
+    background: transparent;
+    color: #1341d6;
+    pointer-events: none;
+    height: max-content;
+  }
+  .settings .select-drop {
+    position: relative;
+  }
+  .settings .select-drop .time-select {
+    width: 670px;
+  }
+}
 .grid-container {
   min-height: 100vh;
   display: grid;
@@ -435,6 +614,12 @@ form textarea {
   grid-template-areas: "header" "nav" "main-content";
 }
 
+@media (min-width: 768px) {
+  .grid-container {
+    grid-template-columns: 50px calc(100% - 50px);
+    grid-template-rows: 50px calc(100% - 50px);
+  }
+}
 .header {
   grid-area: header;
   display: flex;
@@ -465,6 +650,10 @@ form textarea {
   margin: 1em auto;
 }
 
+.svg-bell:hover {
+  animation: forward 2s ease 0s 1 normal forwards;
+}
+
 .tm {
   position: absolute;
   top: 35%;
@@ -490,6 +679,30 @@ form textarea {
   left: 45%;
 }
 
+@media (min-width: 768px) {
+  .header {
+    grid-row: 1/2;
+    grid-column: 1/3;
+  }
+  .svg-bell {
+    width: 3%;
+    margin-left: 57%;
+  }
+  .vertical-line {
+    left: 74%;
+    top: 10%;
+  }
+  .notification {
+    top: 15%;
+    left: 72%;
+  }
+  .tm {
+    left: 12%;
+  }
+  .profile-name {
+    margin-right: 16px;
+  }
+}
 .nav {
   grid-area: nav;
   max-width: 100%;
@@ -501,6 +714,7 @@ form textarea {
   gap: 15px;
   padding: 5px;
   background-color: #212950;
+  margin-right: 5%;
 }
 
 .nav-icon,
@@ -509,4 +723,20 @@ form textarea {
   height: 40px;
   fill: white;
   padding: 5px;
+}
+
+@media (min-width: 768px) {
+  .nav {
+    height: 100%;
+    flex-direction: column;
+    align-items: start;
+    justify-content: flex-start;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    gap: 2px;
+  }
+  .nav-icon {
+    margin-top: 15px;
+    padding: 7px;
+  }
 }
