--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -12,6 +12,7 @@ form{
        padding: 5px;
        border-radius: 5px;
       @include box-shadow;
+      background-color: rgba(177, 193, 218, 0.302);
     }
 
     textarea{
@@ -20,8 +21,28 @@ form{
        padding: 5px;
        border-radius: 2px;
        @include box-shadow;
+       background-color: rgba(177, 193, 218, 0.302);
     }
 
    
+
+}
+
+
+@media (min-width: 768px){
+   form{
+
+      padding: 10px;
+      input{
+         width: 650px;
+      }
+  
+      textarea{
+         width: 650px;
+      }
+  
+     
+  
+  }
 
 }
