--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,13 +1,13 @@
-@use "../utilities/mixins" as *;
-@use "../utilities/variables" as *;
+@use "../utilities/mixins"as *;
+@use "../utilities/variables"as *;
 
 
-.header{
+.header {
     grid-area: header;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:#506BC4;
+    background-color: #506BC4;
     color: white;
     position: relative;
     @include max-width;
@@ -15,33 +15,36 @@
     gap: 15px;
     padding: 2px 10px;
     margin: 0 auto;
-   
+
 }
 
-.web{
+.web {
     font-weight: 700;
 }
 
-.title{
+.title {
     font-size: 20px;
 }
 
-.svg-bell{
+.svg-bell {
     width: 7%;
-   fill: white;
-   margin: 1em auto;
+    fill: white;
+    margin: 1em auto;
 }
 
+.svg-bell:hover {
+    animation: forward 2s ease 0s 1 normal forwards;
+}
 
-.tm{
+.tm {
     position: absolute;
     top: 35%;
     left: 28%;
     font-size: 10px;
 }
 
-.notification{
-    background-color:#50C4B0;
+.notification {
+    background-color: #50C4B0;
     width: 5px;
     height: 5px;
     position: absolute;
@@ -50,10 +53,42 @@
     border-radius: 100%;
 }
 
-.vertical-line{
+.vertical-line {
     border-left: 1px solid #7A8088;
-            height: 40px;
-            position:absolute;
-            top: 20%;
-            left: 45%;
+    height: 40px;
+    position: absolute;
+    top: 20%;
+    left: 45%;
+}
+
+
+@media (min-width: 768px) {
+    .header {
+        grid-row: 1 / 2;
+        grid-column: 1 / 3;
+    }
+
+    .svg-bell {
+        width: 3%;
+        margin-left: 57%;
+    }
+
+    .vertical-line {
+        left: 74%;
+        top: 10%;
+    }
+
+    .notification {
+        top: 15%;
+        left: 72%;
+    }
+
+    .tm {
+        left: 12%;
+    }
+
+    .profile-name {
+        margin-right: 16px;
+    }
+
 }
