--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -92,3 +92,23 @@
     }
 
 }
+
+
+@media (min-width: 1024px) {
+
+    .svg-bell {
+        margin-left: 66%;
+    }
+
+    .vertical-line {
+        left: 80%;
+    }
+
+    .notification {
+        left: 78%;
+    }
+
+    .tm {
+        left: 9%;
+    }
+}
