--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,18 @@ a {
     margin-left: 25px;
   }
 }
+@media (min-width: 1024px) {
+  .form-button {
+    width: 400px;
+  }
+  .setting-button {
+    width: 200px;
+    margin-top: 60px;
+  }
+  .cancel-button {
+    margin-left: 25px;
+  }
+}
 form {
   display: flex;
   align-items: center;
@@ -134,6 +146,12 @@ form textarea {
   transition: all 200ms;
   background-color: rgba(177, 193, 218, 0.302);
 }
+form textarea:hover,
+form input:hover {
+  border: 1px solid rgba(0, 0, 255, 0.556);
+  box-shadow: 0 5px 5px -4px;
+  transition: all 200ms;
+}
 
 @media (min-width: 768px) {
   form {
@@ -144,6 +162,14 @@ form textarea {
   }
   form textarea {
     width: 650px;
+  }
+}
+@media (min-width: 1024px) {
+  form input {
+    width: 400px;
+  }
+  form textarea {
+    width: 400px;
   }
 }
 .profile-img {
@@ -324,6 +350,9 @@ form textarea {
   margin-top: 15px;
   margin-bottom: 15px;
 }
+.new-members h3 {
+  margin-left: 30px;
+}
 
 .recent-activity {
   margin: 1em auto;
@@ -340,7 +369,8 @@ form textarea {
 }
 
 .message-user {
-  padding: 15px;
+  padding: 0 15px;
+  padding-bottom: 10px;
 }
 
 .settings {
@@ -607,6 +637,65 @@ form textarea {
     width: 670px;
   }
 }
+@media (min-width: 1024px) {
+  .dash-board-section .dash-board-tab {
+    width: 860px;
+  }
+  .dash-board-section .alert {
+    width: 950px;
+  }
+  .traffic-board {
+    padding: 10px;
+  }
+  .traffic-board .traffic-heading .traffic-list ul {
+    margin-left: 160%;
+  }
+  .traffic-board .full-widget-container {
+    width: 900px;
+  }
+  .media-query-flex .bar-widget {
+    width: 450px;
+  }
+  .member-activity-container {
+    display: flex;
+    padding: 5px;
+  }
+  .member-activity-container .new-members {
+    padding: 0;
+  }
+  .member-activity-container .new-members .members-profile .date {
+    margin-left: 0.5%;
+  }
+  .member-activity-container .new-members .members-profile .date-2 {
+    margin-left: 15%;
+  }
+  .member-activity-container .new-members .members-profile .date-3 {
+    margin-left: 10%;
+  }
+  .member-activity-container .new-members .members-profile .date-4 {
+    margin-left: 12%;
+  }
+  .member-activity-container .recent-activity {
+    padding: 0;
+  }
+  .member-activity-container .recent-activity .members-profile .fa-greater-than {
+    left: 90%;
+  }
+  .message-settings-container {
+    display: flex;
+    gap: 15px;
+  }
+  .message-settings-container .settings .select-drop:after {
+    top: 47%;
+    right: 10%;
+  }
+  .message-settings-container .settings .select-drop .time-select {
+    width: 400px;
+  }
+  .message-settings-container .message-user {
+    padding-left: 30px;
+  }
+}
 .grid-container {
   min-height: 100vh;
   display: grid;
@@ -701,6 +790,20 @@ form textarea {
   }
   .profile-name {
     margin-right: 16px;
+  }
+}
+@media (min-width: 1024px) {
+  .svg-bell {
+    margin-left: 66%;
+  }
+  .vertical-line {
+    left: 80%;
+  }
+  .notification {
+    left: 78%;
+  }
+  .tm {
+    left: 9%;
   }
 }
 .nav {
