--- a/sass/layouts/_content.scss
+++ b/sass/layouts/_content.scss
@@ -654,8 +654,8 @@
 
         .settings {
             .select-drop:after{
-                top: 47%;
-                right: 10%;
+                top: 27px;
+                right: 47px;
                 
             }
 
