--- a/css/style.css
+++ b/css/style.css
@@ -686,8 +686,8 @@ form input:hover {
     gap: 15px;
   }
   .message-settings-container .settings .select-drop:after {
-    top: 47%;
-    right: 10%;
+    top: 27px;
+    right: 47px;
   }
   .message-settings-container .settings .select-drop .time-select {
     width: 400px;
@@ -697,6 +697,9 @@ form input:hover {
   }
 }
 .grid-container {
+  background-color: rgba(255, 0, 0, 0.331);
+  margin: 0 auto;
+  max-width: 1024px;
   min-height: 100vh;
   display: grid;
   grid-template-columns: 100%;
