--- a/sass/layouts/_grid.scss
+++ b/sass/layouts/_grid.scss
@@ -2,6 +2,9 @@
 @use "../utilities/variables" as *;
 
 .grid-container{
+    background-color: rgba(255, 0, 0, 0.331);
+    margin: 0 auto;
+    max-width: 1024px;
     min-height: 100vh;
     @include grid-layout;
     grid-template-areas: 
