--- a/sass/base/_animation.scss
+++ b/sass/base/_animation.scss
@@ -21,3 +21,25 @@
         transform: scale(1);
     }
 }
+
+@keyframes fade-down {
+    0% {
+        translate: 0 -100%;
+        opacity: 0;
+    }
+    100% {
+        translate: 0 0%;
+        opacity: 1;
+    }
+}
+
+@keyframes fade-up {
+    0% {
+        translate: 0 100%;
+        opacity: 0;
+    }
+    100% {
+        translate: 0 0%;
+        opacity: 1;
+    }
+}
