--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -1,6 +1,9 @@
 @use "../utilities/mixins"as *;
 @use "../utilities/variables"as *;
 
+html{
+    scroll-behavior: smooth;
+}
 
 h3 {
     margin-bottom: 10px;
@@ -15,6 +18,10 @@ a{
     text-decoration: none;
 }
 
+
+
+
 @media (min-width: 768px){
     
 }
+
