--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,26 @@
     transform: scale(1);
   }
 }
+@keyframes fade-in {
+  0% {
+    visibility: hidden;
+    opacity: 0;
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+@keyframes fade-out {
+  0% {
+    visibility: visible;
+    opacity: 1;
+  }
+  100% {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
 @keyframes fade-down {
   0% {
     translate: 0 -100%;
@@ -34,6 +54,14 @@
     opacity: 1;
   }
 }
+.fade-in {
+  animation: fade-in 400ms ease-in;
+}
+
+.fade-out {
+  animation: fade-out 400ms ease-in;
+}
+
 .grid-container {
   font-family: "Open Sans", sans-serif;
 }
@@ -430,6 +458,7 @@ form .form-group .form-error {
 .new-members .members-profile {
   margin-top: 15px;
   margin-bottom: 15px;
+  transition: all 200ms;
 }
 .new-members h3 {
   margin-left: 30px;
@@ -594,11 +623,11 @@ form .form-group .form-error {
 }
 
 .show {
-  display: block;
+  display: block !important;
 }
 
 .hide {
-  display: none;
+  display: none !important;
 }
 
 @media (min-width: 768px) {
