--- a/sass/base/_animation.scss
+++ b/sass/base/_animation.scss
@@ -22,6 +22,28 @@
     }
 }
 
+@keyframes fade-in {
+    0% {
+        visibility: hidden;
+        opacity: 0;
+    }
+    100% {
+        visibility: visible;
+        opacity: 1;
+    }
+}
+
+@keyframes fade-out {
+    0% {
+        visibility: visible;
+        opacity: 1;
+    }
+    100% {
+        visibility: hidden;
+        opacity: 0;
+    }
+}
+
 @keyframes fade-down {
     0% {
         translate: 0 -100%;
@@ -42,4 +64,12 @@
         translate: 0 0%;
         opacity: 1;
     }
+}
+
+.fade-in {
+    animation: fade-in 400ms ease-in;
+}
+
+.fade-out {
+    animation: fade-out 400ms ease-in;
 }
