cross border complete

--- a/css/style.css
+++ b/css/style.css
@@ -736,7 +736,6 @@ form .form-group .form-error {
   }
   .member-activity-container {
     display: flex;
-    padding: 5px;
   }
   .member-activity-container .new-members {
     padding: 0;
@@ -761,13 +760,10 @@ form .form-group .form-error {
   }
   .message-settings-container {
     display: flex;
-    gap: 15px;
+    margin-left: 27px;
   }
   .message-settings-container .settings .select-drop .time-select {
     width: 400px;
-  }
-  .message-settings-container .message-user {
-    padding-left: 30px;
   }
 }
 .grid-container {
