--- a/sass/layouts/_content.scss
+++ b/sass/layouts/_content.scss
@@ -3,6 +3,7 @@
 
 
 .main-content {
+    border-right: 1px solid gray;
     grid-area: main-content;
     @include grid-layout;
     grid-template-areas:
@@ -14,7 +15,7 @@
         "new-members"
         "recent-activity"
         "message-user"
-        "settings"
+        "settings";
 }
 
 .dash-board-section {
